@@ -74,6 +74,9 @@
 #include <stdio.h> 
 #include <stdlib.h> 
 #include <string.h>
+#ifdef WIN32
+#include <fcntl.h>
+#endif
 
 #include "basics.h"	/* fatal() */
 
